# django-movie-itsy

./: commands.txt  docker-compose.yml  dockerFile  manage.py  pyproject.toml
itsy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
movie/: models.py  urls.py  views.py
movie/migrations/: 0001_initial.py
